--- a/src/app/component/load-folda/load-folda.component.html
+++ b/src/app/component/load-folda/load-folda.component.html
@@ -1,8 +1,8 @@
 <div class="load-folda" *ngIf="!loading">
   <input mat-input type="file" multiple webkitdirectory style="display: none" #fileInput accept="image/*" (change)="onLoadFiles($event.target.files)" />
-  <button mat-raised-button color="primary" class="file-select-button" (click)="onClickFileInputButton()">
+  <button mat-raised-button color="primary" (click)="onClickFileInputButton()">
     <mat-icon>attach_file</mat-icon>
-    ファイルを選択
+    フォルダを選択
   </button>
 </div>
 
