[feat] file load button and search word button

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,10 +11,6 @@
   padding-left: 10vw;
 }
 
-.middle {
-  display: inline;
-}
-
 .sider {
   position: fixed;
   background-color: #fff;
@@ -47,4 +43,8 @@
 
 .content {
   margin-left: 12vw;
+}
+
+.search-graph {
+  margin-left: 10vw;
 }
