--- a/src/app/component/graph/graph.component.html
+++ b/src/app/component/graph/graph.component.html
@@ -1,1 +1,3 @@
-<!-- <google-chart class="search-graph" [data]="myData" type="ColumnChart" title="検索ヒット数" [dynamicResize]="true" [height]="300" [width]="1000"></google-chart> -->
+<p class="no-graph" *ngIf="!graphData.length">検索後グラフが表示されます</p>
+
+<google-chart *ngIf="graphData.length" class="search-graph" [data]="graphData" type="ColumnChart" title="検索ヒット数" [dynamicResize]="true" [height]="300" [width]="1000"></google-chart>
