--- a/src/app/component/graph/graph.component.scss
+++ b/src/app/component/graph/graph.component.scss
@@ -1,9 +1,5 @@
-.frame {
-  width: 58vw;
-  height: 40vh;
-}
-
-.graph {
-  width: 100%;
-  height: 100%;
+.no-graph {
+  color: #00c;
+  margin-top: 3vh;
+  margin-bottom: 2vh;
 }
