[refactor] move load file logic to service

--- a/src/app/component/load-folda/load-folda.component.html
+++ b/src/app/component/load-folda/load-folda.component.html
@@ -12,10 +12,10 @@
 <div class="result">
   読み込み結果
   <div class="text">
-    {{loaded.fileNumber}}ファイル
+    {{loadResult.fileNumber}}ファイル
   </div>
 
   <div class="text">
-    {{loaded.charNumber}}文字
+    {{loadResult.charNumber}}文字
   </div>
 </div>
