[fix] remove extra factor

--- a/src/app/component/search-word/search-word.component.html
+++ b/src/app/component/search-word/search-word.component.html
@@ -1,4 +1,4 @@
-<div class="search-word" *ngIf="!searching">
+<div class="search-word">
   <button mat-raised-button color="primary" (click)="onSearch()">
     <mat-icon>search</mat-icon>
     検索開始
