--- a/src/app/component/create-word/create-word.component.scss
+++ b/src/app/component/create-word/create-word.component.scss
@@ -26,28 +26,11 @@
   margin-bottom: 2vh;
 }
 
-// .search {
-//   display: flex;
-//   flex-direction: row;
-// }
 
-// .search-condition {
-//   display: flex;
-//   flex-direction: column;
-//   width: 40%;
-// }
+.complement {
+  position: absolute;
+  top: 0px;
+  right: 30vw;
+  ;
 
-// .search-word-list {
-//   display: flex;
-//   margin-left: 3vw;
-// }
-
-// .list-title {
-//   color: #33a;
-//   font-size: 16px;
-// }
-
-// .word-list {
-//   color: #088;
-//   margin-left: 1vw;
-// }
+}
