[lint] use tslint

--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -13,5 +13,5 @@
 
     そこでは、複数の文字と前後の文字数を指定して検索し、文章から文を切り抜くことができます。
   </p>
-  <update-info></update-info>
+  <app-update-info></app-update-info>
 </div>
