wrote test of req-exp page, contents are click event and calling reset functions

--- a/src/app/pages/reg-exp-search/reg-exp-search.component.html
+++ b/src/app/pages/reg-exp-search/reg-exp-search.component.html
@@ -4,7 +4,7 @@
     <!-- <form [formGroup]="firstFormGroup"> -->
     <ng-template matStepLabel>検索条件</ng-template>
     <app-create-word></app-create-word>
-    <button mat-stroked-button color="warn" matStepperPrevious (click)="onResetSearchCondition()">リセット</button>
+    <button mat-stroked-button class="resetSearchCondition" color="warn" matStepperPrevious (click)="onResetSearchCondition()">リセット</button>
     <button mat-stroked-button color="primary" matStepperNext>入力完了</button>
     <!-- </form> -->
   </mat-step>
@@ -14,7 +14,7 @@
       <ng-template matStepLabel>フォルダ読み込み</ng-template>
       <app-load-folda></app-load-folda>
       <button mat-stroked-button color="accent" matStepperPrevious>戻る</button>
-      <button mat-stroked-button color="warn" (click)="onResetLoadFolda()">リセット</button>
+      <button mat-stroked-button class="resetLoadFolda" color="warn" (click)="onResetLoadFolda()">リセット</button>
       <button mat-stroked-button color="primary" matStepperNext>次へ</button>
     </form>
   </mat-step>
@@ -24,7 +24,7 @@
       <ng-template matStepLabel>文字検索</ng-template>
       <app-search-word></app-search-word>
       <button mat-stroked-button color="accent" matStepperPrevious>戻る</button>
-      <button mat-stroked-button color="warn" (click)="onResetSearchResult()">リセット</button>
+      <button mat-stroked-button class="resetSearchResult" color="warn" (click)="onResetSearchResult()">リセット</button>
       <button mat-stroked-button color="primary" matStepperNext>次へ</button>
     </form>
   </mat-step>
@@ -43,7 +43,7 @@
       <ng-template matStepLabel>ダウンロード</ng-template>
       <app-download-file></app-download-file>
       <button mat-stroked-button color="accent" matStepperPrevious>戻る</button>
-      <button mat-stroked-button color="primary" (click)="stepper.reset(); onResetAll()">リセット</button>
+      <button mat-stroked-button class="resetAll" color="primary" (click)="stepper.reset(); onResetAll()">リセット</button>
     </form>
   </mat-step>
 
