--- a/src/app/pages/reg-exp-search/reg-exp-search.component.html
+++ b/src/app/pages/reg-exp-search/reg-exp-search.component.html
@@ -12,7 +12,7 @@
   <mat-step [stepControl]="secondFormGroup">
     <form [formGroup]="secondFormGroup">
       <ng-template matStepLabel>フォルダ読み込み</ng-template>
-      <app-load-folda></app-load-folda>
+      <app-load-text></app-load-text>
       <button mat-stroked-button color="accent" matStepperPrevious>戻る</button>
       <button mat-stroked-button class="resetLoadFolda" color="warn" (click)="onResetLoadFolda()">リセット</button>
       <button mat-stroked-button color="primary" matStepperNext>次へ</button>
