--- a/src/app/components/load-file/load-file.component.html
+++ b/src/app/components/load-file/load-file.component.html
@@ -6,4 +6,4 @@
   </button>
 </div>
 
-<mat-progress-bar class="progress-bar" *ngIf="loading" mode="query"></mat-progress-bar>
+<mat-progress-bar class="progress-bar" *ngIf="loading" mode="buffer"></mat-progress-bar>
